@@ -1,0 +1,27 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<!-- $Id$ -->
+<!-- From RFC 5491 Section 3.2 -->
+<presence xmlns="urn:ietf:params:xml:ns:pidf"
+          xmlns:dm="urn:ietf:params:xml:ns:pidf:data-model"
+          xmlns:gp="urn:ietf:params:xml:ns:pidf:geopriv10"
+          xmlns:gml="http://www.opengis.net/gml"
+          xmlns:cl="urn:ietf:params:xml:ns:pidf:geopriv10:civicAddr"
+          entity="pres:mike@seattle.example.com">
+  <dm:device id="mikepc">
+    <gp:geopriv>
+      <gp:location-info>
+        <gml:Point srsName="urn:ogc:def:crs:EPSG::4326">
+          <gml:pos>-43.5723 153.21760</gml:pos>
+        </gml:Point>
+        <cl:civicAddress>
+          <cl:FLR>2</cl:FLR>
+        </cl:civicAddress>
+      </gp:location-info>
+      <gp:usage-rules/>
+      <gp:method>Wiremap</gp:method>
+    </gp:geopriv>
+    <dm:deviceID>mac:8asd7d7d70cf</dm:deviceID>
+    <dm:timestamp>2007-06-22T20:57:29Z</dm:timestamp>
+  </dm:device>
+</presence>
